svg refactoring